--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,17 @@
+#service config
+spring.application.name=notification-service
+server.port=8006
+eureka.client.service-url.default-zone=http://localhost:8761/eureka
 
+
+spring.mail.host=smtp.gmail.com
+
+#email bigcart.notification.service@gmail.com
+spring.mail.username=bigcart.notification.service@gmail.com
+spring.mail.password=bigcart.notification.service1
+spring.mail.protocol=smtp
+
+spring.mail.port=465
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.ssl.enable=true
